[workspace]
members = ["crates/rand_rgb", "crates/rand_hsl", "crates/rand_color"]
resolver = "2"

[workspace.package]
authors = ["Édouard Urcades <edouard@urcad.es>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/urcades/rand_rgb"
homepage = "https://github.com/urcades/rand_rgb"

[workspace.dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
