[workspace]
members = [
    "crates/rand_rgb",
    "crates/rand_hsl",
    "crates/rand_hsv",
    "crates/rand_hwb",
    "crates/rand_oklab",
    "crates/rand_oklch",
    "crates/rand_lab",
    "crates/rand_lch",
    "crates/rand_color_convert",
    "crates/rand_color",
]
resolver = "2"

[workspace.package]
authors = ["Édouard Urcades <edouard@urcad.es>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/urcades/rand_color"
homepage = "https://github.com/urcades/rand_color"

[workspace.dependencies]
rand = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
proptest = "1.6"
