[package]
name = "rand_color"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rand_color"
readme = "README.md"
description = "Unified random color generation across color spaces."
keywords = ["color", "rgb", "hsl"]
categories = ["graphics", "development-tools"]

[features]
default = []
serde = ["rand_rgb/serde", "rand_hsl/serde"]

[dependencies]
rand_rgb = { path = "../rand_rgb", version = "0.2.1", default-features = false }
rand_hsl = { path = "../rand_hsl", version = "0.1.0", default-features = false }
