[package]
name = "rand_color"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version = "1.74"
documentation = "https://docs.rs/rand_color"
readme = "README.md"
description = "Unified random color generation across color spaces."
keywords = ["color", "rgb", "hsl"]
categories = ["graphics", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = [
  "rand_rgb/serde",
  "rand_hsl/serde",
  "rand_hsv/serde",
  "rand_hwb/serde",
  "rand_oklab/serde",
  "rand_oklch/serde",
  "rand_lab/serde",
  "rand_lch/serde",
]

[dependencies]
rand_rgb = { path = "../rand_rgb", version = "0.2.3", default-features = false }
rand_hsl = { path = "../rand_hsl", version = "0.1.2", default-features = false }
rand_hsv = { path = "../rand_hsv", version = "0.1.1", default-features = false }
rand_hwb = { path = "../rand_hwb", version = "0.1.1", default-features = false }
rand_oklab = { path = "../rand_oklab", version = "0.1.1", default-features = false }
rand_oklch = { path = "../rand_oklch", version = "0.1.1", default-features = false }
rand_lab = { path = "../rand_lab", version = "0.1.1", default-features = false }
rand_lch = { path = "../rand_lch", version = "0.1.1", default-features = false }
rand_color_convert = { path = "../rand_color_convert", version = "0.1.1", default-features = false }
