[package]
name = "rand_color_convert"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version = "1.74"
documentation = "https://docs.rs/rand_color_convert"
readme = "README.md"
description = "Color conversion strategy and helpers for rand_color workspace."
keywords = ["color", "conversion", "rgb", "hsl"]
categories = ["graphics", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
rand_rgb = { path = "../rand_rgb", version = "0.2.3", default-features = false }
rand_hsl = { path = "../rand_hsl", version = "0.1.2", default-features = false }

[dev-dependencies]
proptest.workspace = true
