[package]
name = "rand_hwb"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version = "1.74"
documentation = "https://docs.rs/rand_hwb"
readme = "README.md"
description = "Generate random HWB colors with configurable ranges."
keywords = ["color", "hwb"]
categories = ["graphics", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
rand.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
