[package]
name = "rand_lch"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version = "1.74"
documentation = "https://docs.rs/rand_lch"
readme = "README.md"
description = "Generate random CIELCH colors with configurable ranges."
keywords = ["color", "lch", "cielch"]
categories = ["graphics", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
rand.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
