[package]
name = "rand_rgb"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rand_rgb"
readme = "README.md"
description = "Generate a random rgba-formatted color."
keywords = ["color", "rgb"]
categories = ["graphics", "development-tools"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
rand.workspace = true
serde = { workspace = true, optional = true }
