[package]
name = "rand_rgb"
version = "0.2.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version = "1.74"
documentation = "https://docs.rs/rand_rgb"
readme = "README.md"
description = "Generate a random rgba-formatted color."
keywords = ["color", "rgb"]
categories = ["graphics", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
rand.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
